# SS-Analyzer

./: BACKUP.py  LICENSE  Pipfile  README.md  Tree_Resistance.py  config.py  pyproject.toml  test.ini  test.json  test.py  tool.py
Channel Model/: Channel Pressure.ipynb  Channel Resistance.ipynb
Channel Model/.ipynb_checkpoints/: Channel Pressure-checkpoint.ipynb
JSON_Parser/: Parser.ipynb
Parser_Classes/: Component.py  Connection.py  JSON_Parser.py  Parser.py  Port.py  Target.py
Solver/: Channel_Mod.py  Pressure.py  Solver.py  __init__.py  flowEquation.py  newSolver.py
Stable Copy Modular Code/Parser_Classes/: Connection.py
Stable Copy Modular Code/Solver/: Mixer_Resistance.py  Solver.py
docs/: conf.py  index.rst  modules.rst  ufssanalyzer.electrical.resistance.rst  ufssanalyzer.electrical.rst  ufssanalyzer.rst  ufssanalyzer.solver.rst
electrical/: cPoint.py  eNetwork.py  rElement.py
electrical/resistance/: Channel_Resistance.py  Mixer_Resistance.py  connection.py  constants.py  mixer.py  rModel.py
parchmint/: component.py  device.py  params.py
parser/: parser.py  target.py
solver/: tree_resistance.py
ufssanalyzer/: config.py  tool.py
ufssanalyzer/electrical/: cPoint.py  constants.py  eNetwork.py  rElement.py
ufssanalyzer/electrical/resistance/: connection.py  constants.py  mixer.py  rModel.py
ufssanalyzer/solver/: flowEquation.py  solver.py  tool.py
webserivce/: BACKUP  BACKUP.py  Channel_Resistance.py  JSON_Parser.py  Pipfile
webserivce/Parser_Classes/: Parser.py  Target.py
(+2 files in other folders)
